--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^16.4.6",
+    "@react-native-firebase/auth": "^16.5.0",
+    "@react-native-google-signin/google-signin": "^9.0.1",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "firebase": "^9.15.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.8.0",
