--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,10 +2,17 @@
 
 buildscript {
     ext {
+        //org
         buildToolsVersion = "31.0.0"
         minSdkVersion = 21
         compileSdkVersion = 31
         targetSdkVersion = 31
+        ndkVersion = "21.4.7075529"
+        supportLibVersion="27.1.1"
+        googlePlayServicesAuthVersion = "19.2.0"
+
+       
+
 
         if (System.properties['os.arch'] == "aarch64") {
             // For M1 Users we need to use the NDK 24 which added support for aarch64
@@ -23,7 +30,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:7.2.1")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:5.0.1")
-        classpath 'com.google.gms:google-services:4.3.13'
+        classpath 'com.google.gms:google-services:4.3.10' // <--- use this version or newer
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
