--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/geolocation": "^3.0.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^16.4.6",
     "@react-native-firebase/auth": "^16.5.0",
-    "@react-native-google-signin/google-signin": "^9.0.1",
+    "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -26,6 +27,7 @@
     "react-native-image-slider-banner": "^1.0.3",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-paper": "^5.0.0-rc.10",
+    "react-native-permissions": "^3.6.1",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
