--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-picker": "^4.10.3",
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-banner": "^1.0.3",
     "react-native-image-slider-box": "^2.0.7",
