--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^16.5.0",
     "@react-native-firebase/auth": "^16.5.0",
+    "@react-native-firebase/database": "^16.5.0",
     "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/native": "^6.0.13",
@@ -34,6 +35,7 @@
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-slidable-drawer-panel": "^1.0.6",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0"
