--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-share": "^8.1.0",
     "react-native-slidable-drawer-panel": "^1.0.6",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
