--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/auth": "^17.0.0",
     "@react-native-firebase/database": "^17.0.0",
     "@react-native-firebase/firestore": "^17.3.0",
+    "@react-native-firebase/messaging": "^17.3.0",
     "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/native": "^6.0.13",
